@@ -27,6 +27,7 @@ enum {
 	HXQUOTE_BASE64,
 	HXQUOTE_URIENC,
 	HXQUOTE_SQLSQUOTE,
+	HXQUOTE_SQLBQUOTE,
 	_HXQUOTE_MAX,
 };
 
