@@ -2,10 +2,13 @@
 
 HEAD
 ====
+Enhancements:
+- string: add the HXQUOTE_SQLBQUOTE quoting variant
 
 
 v3.21 (2014-06-02)
 ==================
+Enhancements:
 - HXformat_add() now supports HXTYPE_MCSTR objects (with and without
   HXTYPE_IMMED)
 - libxml_helper: New xml_getnsprop() function that gets the value of a
